Iterate on magic link some