@@ -1,17 +1,22 @@
 package group.aelysium.rustyconnector.server.magic_link;
 
+import com.google.gson.Gson;
 import com.google.gson.JsonObject;
 import group.aelysium.rustyconnector.RC;
 import group.aelysium.rustyconnector.RustyConnector;
+import group.aelysium.rustyconnector.common.FailCapture;
 import group.aelysium.rustyconnector.common.absolute_redundancy.Particle;
 import group.aelysium.rustyconnector.common.cache.MessageCache;
 import group.aelysium.rustyconnector.common.magic_link.MagicLinkCore;
 import group.aelysium.rustyconnector.common.magic_link.packet.PacketListener;
 import group.aelysium.rustyconnector.common.magic_link.packet.PacketParameter;
+import group.aelysium.rustyconnector.proxy.util.AddressUtil;
+import group.aelysium.rustyconnector.proxy.util.LiquidTimestamp;
 import group.aelysium.rustyconnector.server.ServerFlame;
 import group.aelysium.rustyconnector.server.events.DisconnectedEvent;
 import group.aelysium.rustyconnector.common.crypt.AESCryptor;
 import group.aelysium.rustyconnector.common.magic_link.packet.Packet;
+import group.aelysium.rustyconnector.server.lang.ServerLang;
 import group.aelysium.rustyconnector.server.magic_link.handlers.HandshakeFailureListener;
 import group.aelysium.rustyconnector.server.magic_link.handlers.HandshakeStalePingListener;
 import group.aelysium.rustyconnector.server.magic_link.handlers.HandshakeSuccessListener;
@@ -20,98 +25,110 @@ import org.java_websocket.handshake.ServerHandshake;
 import org.jetbrains.annotations.NotNull;
 
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.InetSocketAddress;
 import java.net.URI;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
+import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 
 public class WebSocketMagicLink extends MagicLinkCore.Server {
-    private final URL proxyEndpoint;
+    private final InetSocketAddress address;
     private WebSocketClient client = null;
+    private final FailCapture failCapture = new FailCapture(5, LiquidTimestamp.from(15, TimeUnit.SECONDS));
 
     protected WebSocketMagicLink(
             @NotNull AESCryptor cryptor,
             @NotNull MessageCache cache,
             @NotNull Packet.Target self,
-            @NotNull String registrationConfiguration,
-            @NotNull URL proxyEndpoint
+            @NotNull InetSocketAddress address,
+            @NotNull String registrationConfiguration
     ) {
         super(cryptor, cache, self, registrationConfiguration);
-        this.proxyEndpoint = proxyEndpoint;
+        this.address = address;
 
         this.heartbeat();
     }
 
-    public void connect() {
+    /**
+     * Attempts to establish a connection to the MagicLink instance running on the proxy.
+     */
+    public void connect() throws ExceptionInInitializerError {
+        if(this.failCapture.willFail()) return;
+
+        String apiAddress = AddressUtil.addressToString(this.address);
+        HttpClient client = HttpClient.newHttpClient();
+
+        String endpoint;
+        String token;
+        String signature;
         try {
-            URL url = new URL("https://api.example.com/endpoint");
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create("https://"+apiAddress+"/bDaBMkmYdZ6r4iFExwW6UzJyNMDseWoS3HDa6FcyM7xNeCmtK98S3Mhp4o7g7oW6VB9CA6GuyH2pNhpQk3QvSmBUeCoUDZ6FXUsFCuVQC59CB2y22SBnGkMf9NMB9UWk"))
+                    .header("Authorization", "Bearer "+cryptor.encrypt(String.valueOf(Instant.now().getEpochSecond())))
+                    .GET()
+                    .build();
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8));
 
-            connection.setRequestMethod("POST");
-            connection.setRequestProperty("Content-Type", "application/json");
-            connection.setRequestProperty("Authorization", this.cryptor.encrypt(AUTH_));
-            connection.setDoOutput(true);
-
-            JsonObject object = new JsonObject();
-            object.add("");
-
-            try (OutputStream os = connection.getOutputStream()) {
-                byte[] input = jsonInputString.getBytes("utf-8");
-                os.write(input, 0, input.length);
-            }
-
-            // Get the response code
-            int responseCode = connection.getResponseCode();
-            System.out.println("Response Code: " + responseCode);
-
-            // Read the response
-            BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream(), "utf-8"));
-            String inputLine;
-            StringBuilder response = new StringBuilder();
-
-            while ((inputLine = in.readLine()) != null) {
-                response.append(inputLine);
-            }
-            in.close();
-
-            // Print the response
-            System.out.println("Response: " + response.toString());
-
+            Gson gson = new Gson();
+            JsonObject object = gson.fromJson(response.body(), JsonObject.class);
+            endpoint    = cryptor.decrypt(object.get("endpoint").getAsString());
+            token       = cryptor.decrypt(object.get("token").getAsString());
+            signature   = object.get("signature").getAsString();
         } catch (Exception e) {
-            e.printStackTrace();
+            throw new ExceptionInInitializerError(e);
+        }
+
+        try {
+            Map<String, String> headers = Map.of(
+                    "Authorization", "Bearer "+token+"-"+signature
+            );
+            this.client = new WebSocketClient(new URI("ws://"+apiAddress+"/"+endpoint), headers) {
+                @Override
+                public void onOpen(ServerHandshake handshake) {
+                    RC.S.Adapter().log(RC.S.Lang().lang().magicLink());
+                }
+
+                @Override
+                public void onMessage(String message) {
+                    WebSocketMagicLink.this.handleMessage(message);
+                }
+
+                @Override
+                public void onClose(int code, String reason, boolean remote) {
+                    System.out.println("Websocket dropped, attempting to reconnect.");
+                    try {
+                        WebSocketMagicLink.this.failCapture.trigger("[" + code + "] Websocket connection closed with the following reason: " + reason);
+                        this.connect();
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                    }
+                }
+
+                @Override
+                public void onError(Exception e) {
+                    e.printStackTrace();
+                }
+            };
+            this.client.connect();
+        } catch (Exception e) {
+            throw new ExceptionInInitializerError(e);
         }
     }
 
-    public void connect() {
-        Map<String, String> headers = new HashMap<>();
-        headers.put("Authorization", cryptor.encrypt(AUTH_TOKEN));
-
-        this.client = new WebSocketClient(new URI("ws://localhost:4567/ws"), headers) {
-            @Override
-            public void onOpen(ServerHandshake handshakedata) {
-                System.out.println("Connected to server");
-            }
-
-            @Override
-            public void onMessage(String message) {
-                WebSocketMagicLink.this.handleMessage(message);
-            }
-
-            @Override
-            public void onClose(int code, String reason, boolean remote) {
-                System.out.println("Disconnected from server");
-            }
-
-            @Override
-            public void onError(Exception ex) {}
-        };
-    }
-
+    /**
+     * The name of the magic config that should be used on the proxy with this MCLoader.
+     */
     public String magicConfig() {
-        return this.magicConfig;
+        return this.registrationConfiguration;
     }
 
     public void setDelay(int delay) {
@@ -173,20 +190,20 @@ public class WebSocketMagicLink extends MagicLinkCore.Server {
         private final AESCryptor cryptor;
         private final Packet.Target self;
         private final MessageCache cache;
-        private final URL proxyEndpoint;
+        private final InetSocketAddress address;
         private final String magicConfig;
         private final List<PacketListener<? extends Packet>> listeners = new Vector<>();
         public Tinder(
                 @NotNull AESCryptor cryptor,
                 @NotNull Packet.Target self,
                 @NotNull MessageCache cache,
-                @NotNull URL proxyEndpoint,
+                @NotNull InetSocketAddress address,
                 @NotNull String magicConfig
         ) {
             this.cryptor = cryptor;
             this.self = self;
             this.cache = cache;
-            this.proxyEndpoint = proxyEndpoint;
+            this.address = address;
             this.magicConfig = magicConfig;
 
         }
@@ -202,7 +219,7 @@ public class WebSocketMagicLink extends MagicLinkCore.Server {
                     this.cryptor,
                     this.cache,
                     this.self,
-                    this.proxyEndpoint,
+                    this.address,
                     this.magicConfig
             );
 
@@ -216,6 +233,7 @@ public class WebSocketMagicLink extends MagicLinkCore.Server {
                     AESCryptor.DEFAULT_CRYPTOR,
                     Packet.Target.server(serverUUID),
                     new MessageCache(50),
+                    AddressUtil.parseAddress("localhost:500"),
                     "default"
             );
 
